Added google pod file

--- a/Catering/podfile
+++ b/Catering/podfile
@@ -7,6 +7,7 @@ target 'Catering' do
   	pod 'FacebookCore'
   	pod 'FacebookLogin'
 	pod 'FacebookShare'
+	pod 'GoogleSignIn'
   # Pods for Catering
 
 end
